--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy"
     content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+  <link rel="stylesheet" href="main.css">
   <title>Random</title>
 </head>
 
 <body>
-  aaa
+  @@include('./src/components/Navbar/navbar.html')
 </body>
 
 </html>
