--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <meta http-equiv="Content-Security-Policy"
     content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/css/fontello.css">
   <title>Random</title>
 </head>
 
 <body>
+  <!-- <i class="icon-loading animate-spin" /> -->
   @@include('./src/views/LandingPage/index.html')
   <script src="index.js"></script>
 </body>
