--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="/css/fontello.css">
-  <title>Random</title>
+  <title>Desafio Front End - QConcursos</title>
 </head>
 
 <body>
