Refatorando eu acho

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 
 <body>
-  <!-- <i class="icon-loading animate-spin" /> -->
   @@include('./src/views/LandingPage/index.html')
-  <script src="index.js"></script>
+  <script type="text/javascript" src="./index.js"></script>
 </body>
 
 </html>
