--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   @@include('./src/views/LandingPage/index.html')
-  <script type="text/javascript" src="./index.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
